# v1cli

./: .gitignore  Dockerfile  Makefile  README.md  c  cl  docker-compose.yml  pyproject.toml  rs  sr
src/v1cli/: __main__.py  cli.py
src/v1cli/api/: __init__.py  client.py  models.py  queries.py
src/v1cli/config/: auth.py  settings.py  workflow.py
src/v1cli/storage/: __init__.py  local.py
src/v1cli/tui/: __init__.py  app.py
src/v1cli/tui/screens/: projects.py  stories.py  tasks.py
tests/: __init__.py  test_cli.py  test_client.py  test_models.py  test_query_config.py  test_schema_detector.py  test_settings.py  test_storage.py  test_workflow.py
v1cli/: __init__.py  cli.py  display.py
v1cli/api/: client.py  models.py
v1cli/config/: __init__.py  defaults.py  schema_detector.py  settings.py
v1cli/storage/: local.py
v1cli/tui/screens/: dashboard.py  stories.py
