[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "v1cli"
version = "0.1.0"
description = "An opinionated CLI/TUI tool for VersionOne"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Developer" }
]
keywords = ["versionone", "cli", "tui", "agile", "project-management"]
dependencies = [
    "textual>=0.50.0",
    "click>=8.1.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "tomli-w>=1.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
onepassword = [
    "subprocess-tee>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
v1 = "v1cli.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/v1cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
